docs(api): add swagger-ui to API.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,9 @@ spring:
       enabled: false
     jdbc:
       initialize-schema: always
+springdoc:
+  swagger-ui:
+    path: /docs
 
 langchain4j:
   google-ai-gemini:
